--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  objectbox: ^2.0.0
   objectbox_flutter_libs: any
   path_provider: ^2.0.1
 
