--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   objectbox: ^2.0.0
   objectbox_flutter_libs: any
   path_provider: ^2.0.1
+  http: ^0.13.6
 
 
   # The following adds the Cupertino Icons font to your application.
