--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   objectbox_flutter_libs: any
   path_provider: ^2.0.1
   http: ^0.13.6
+  intl: ^0.18.1
+  provider: ^6.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
