--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   http: ^0.13.6
   intl: ^0.18.1
   provider: ^6.0.0
+  shared_preferences: ^2.0.7
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -68,6 +69,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/avatars/
+    - assets/images/icons/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
