--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.0
   table_calendar: ^3.0.9
   shared_preferences: ^2.0.7
+  cached_network_image: ^3.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
