--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   objectbox: ^2.0.0
-  objectbox_flutter_libs: ^2.0.0
+  objectbox_flutter_libs: ^2.2.1
   path_provider: ^2.0.1
   http: ^0.13.6
   intl: ^0.18.1
@@ -39,6 +39,7 @@ dependencies:
   table_calendar: ^3.0.9
   shared_preferences: ^2.0.7
   cached_network_image: ^3.2.3
+  flutter_svg: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -72,6 +73,9 @@ flutter:
     - assets/images/
     - assets/images/avatars/
     - assets/images/icons/
+    - assets/images/icons/budgetCategory/
+    - assets/images/illustrations/male/
+    - assets/images/illustrations/female/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
