--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.4 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -33,13 +33,17 @@ dependencies:
   objectbox: ^2.0.0
   objectbox_flutter_libs: ^2.2.1
   path_provider: ^2.0.1
-  http: ^0.13.6
+  http: ^1.1.0
   intl: ^0.18.1
   provider: ^6.0.0
   table_calendar: ^3.0.9
   shared_preferences: ^2.0.7
   cached_network_image: ^3.2.3
   flutter_svg: ^2.0.5
+  image_picker: ^1.0.4
+  image_cropper: ^5.0.0
+  permission_handler: ^11.0.0
+  uuid: ^4.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
