--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_cropper: ^5.0.0
   permission_handler: ^11.0.0
   uuid: ^4.0.0
+  go_router: 10.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
