--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   permission_handler: ^11.0.0
   uuid: ^4.0.0
   go_router: 10.0.0
+  watcher: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
