Save logic added & FairShare UI started

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
     - assets/images/avatars/
     - assets/images/icons/
     - assets/images/icons/budgetCategory/
+    - assets/images/icons/fairShare/
     - assets/images/illustrations/male/
     - assets/images/illustrations/female/
 
