--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  share_plus: ^7.2.1
+  fluttercontactpicker: ^4.7.0
 
 dev_dependencies:
   flutter_test:
