--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,13 @@ dependencies:
   share_plus: ^7.2.1
   fluttercontactpicker: ^4.7.0
   contacts_service: ^0.6.3
+  firebase_core: ^2.25.5
+  cloud_firestore: ^4.15.6
+  firebase_auth: ^4.17.6
+  google_sign_in: ^6.2.1
+  font_awesome_flutter: ^10.7.0
+  sign_in_button: ^3.2.0
+  currency_picker: ^2.0.21
 
 dev_dependencies:
   flutter_test:
